--- a/basics/pubspec.yaml
+++ b/basics/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   table_calendar: ^3.0.1
+  http: ^0.13.5
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -61,9 +62,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+   - my-place-frontend/Logo.jpg
+   - assets/icon.jpg
+   - assets/Logo.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
