--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   mocktail: ^1.0.3
   bloc_test: ^9.1.7
   path_provider: ^2.1.3
+  google_maps_flutter_web: ^0.5.7
+  google_maps_flutter: ^2.6.1
 
 dev_dependencies:
   flutter_test:
