--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   path_provider: ^2.1.3
   google_maps_flutter_web: ^0.5.7
   google_maps_flutter: ^2.6.1
+  searchable_listview: ^2.13.0
 
 dev_dependencies:
   flutter_test:
