--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   google_maps_flutter_web: ^0.5.7
   google_maps_flutter: ^2.6.1
   searchable_listview: ^2.13.0
+  alert_dialog: ^1.0.2
 
 dev_dependencies:
   flutter_test:
