--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   alert_dialog: ^1.0.2
   faker: ^2.1.0
   lottie: ^3.1.2
+  elegant_notification: ^2.1.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
