--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,9 @@ dependencies:
   lottie: ^3.1.2
   elegant_notification: ^2.1.2
   shimmer: ^3.0.0
+  event_bus: ^2.0.0
+  intl: ^0.19.0
+  vph_web_date_picker: ^0.0.7
 
 dev_dependencies:
   flutter_test:
