--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   json_annotation: ^4.9.0
   injectable_generator: ^2.6.1
   bloc: ^8.1.4
+  image_picker: ^0.8.4+5
   flutter_bloc: ^8.1.5
   go_router: ^14.1.1
   freezed_annotation: ^2.4.1
@@ -66,6 +67,7 @@ dependencies:
   shimmer: ^3.0.0
   event_bus: ^2.0.0
   intl: ^0.19.0
+  file_picker: ^8.0.4
   vph_web_date_picker: ^0.0.7
 
 dev_dependencies:
