--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,8 +67,9 @@ dependencies:
   shimmer: ^3.0.0
   event_bus: ^2.0.0
   intl: ^0.19.0
-  file_picker: ^8.0.4
+  file_picker: ^8.0.5
   vph_web_date_picker: ^0.0.7
+  data_table_2: ^2.5.15
 
 dev_dependencies:
   flutter_test:
